--- a/package.json
+++ b/package.json
@@ -8,15 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.0.5",
+    "@react-navigation/stack": "^6.0.6",
     "expo": "~42.0.1",
+    "expo-av": "~9.2.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-audio-recorder-player": "^3.1.2",
+    "react-native-countdown-circle-timer": "^2.5.3",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "~0.13.12",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/react": "^17.0.17",
+    "@types/react-native": "^0.64.13"
   },
   "private": true
 }
