--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/stack": "^6.0.6",
     "expo": "~42.0.1",
     "expo-av": "~9.2.3",
+    "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-audio-recorder-player": "^3.1.2",
     "react-native-countdown-circle-timer": "^2.5.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
